--- a/views/widget/new_slide/new_slide2.html
+++ b/views/widget/new_slide/new_slide2.html
@@ -30,16 +30,19 @@
             <img src="{{helper.cdnhost}}/assets/img/geren.png" alt="" class="quick-img">
             <p class="mine" >我的</p>
           </li>
-          <li class="weixin_ewm weixin-slide">
+        {#  <li class="weixin_ewm weixin-slide">
             <img src="{{helper.cdnhost}}/assets/img/weixin_slide.png" alt="" class="quick-img" style="height: 22px;margin-top: 3px;">
             <div class="weixin-slide-img">
-
+              <img src="" alt="">
             </div>
+          </li>#}
+          <li class="weixin_ewm weixin-slide weichuan">
+            <img src="{{helper.cdnhost}}/assets/img/weixin_slide.png" alt="" class="quick-img" style="height: 22px;margin-top: 3px;">
           </li>
           <li class="weixin_ewm qq-slide">
             <img src="{{helper.cdnhost}}/assets/img/qq_slide.png" alt="" class="quick-img">
             <div class="qq-slide-img">
-
+              <img src="" alt="">
             </div>
           </li>
           <li id="to_top">
