--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -1,5 +1,5 @@
 <style type="text/css">
-#lxContaniner{margin-top:30px;width:1200px;overflow: hidden;}
+#lxContaniner{margin-top:30px;width:1200px;overflow: hidden;margin-left: auto;margin-right: auto;}
 .lx-head{margin-bottom:20px;padding-bottom:10px;height:27px;border-bottom:solid 1px #dcdcdc}
 .lx-head h1{float:left;margin-right:70px;color:#333;font-size:22px}
 .lx-tabitems{float:left;margin-top:5px}
@@ -21,7 +21,7 @@
 .gw-legend{float:right;margin-top:18px;background:#f9f6f1;color:#c13232;font-size:12px}
 .gw-news{width:76px;height:20px;-webkit-border-radius:10px;border-radius:10px;background-color:#ff8547;color:#fff;text-align:center;line-height:20px}
 </style>
-<div id="lxContaniner" style="margin-left:0;overflow:hidden">
+<div id="lxContaniner" style="overflow:hidden">
 	<div class="lx-head">
 		<h1>美国留学</h1>
 		<ul class="lx-tabitems">
