--- a/views/index.html
+++ b/views/index.html
@@ -93,9 +93,10 @@
   }
   .liuxue-guoqi a{
     width: auto;
-    margin: 20px 50px 47px 0;
+    margin: 20px 54px 47px 0;
     height:30px;
-    display: inline-block;
+    display:block;
+    float: left;
     position: relative;
   }
   .liuxue-guojia-title{
@@ -143,6 +144,7 @@
     height: 135px;
     background: #ccc;
     list-style: none;
+    cursor: pointer;
   }
   #lunbo1 li img{
     width: 100%;
@@ -159,17 +161,17 @@
       <a   href="#"><img src="{{helper.cdnhost}}/assets/img/Australia.png" alt="澳大利亚留学"><p>澳大利亚</p></a>
       <a   href="#"><img src="{{helper.cdnhost}}/assets/img/Canada.png" alt="加拿大留学"><p>加拿大</p></a>
       <a   href="#"><img src="{{helper.cdnhost}}/assets/img/NEW ZEALAND.png" alt="新西兰留学"><p>新西兰</p></a>
-      <a   href="#"><img src="{{helper.cdnhost}}/assets/img/Korea.png" alt="韩国留学"><p>韩国</p></a>
       <a   href="#"><img src="{{helper.cdnhost}}/assets/img/Japan.png" alt="日本留学"><p>日本</p></a>
+      <a   href="#"><img src="{{helper.cdnhost}}/assets/img/Korea.png" alt="韩国留学"><p>韩国</p></a>
+      <a  href="#"><img src="{{helper.cdnhost}}/assets/img/HongKong.png" alt="中国香港留学"><p>中国香港</p></a>
       <a   href="#"><img src="{{helper.cdnhost}}/assets/img/Ukraine.png" alt="乌克兰留学"><p>乌克兰</p></a>
       <a   href="#"><img src="{{helper.cdnhost}}/assets/img/Russia.png" alt="俄罗斯留学"><p>俄罗斯</p></a>
       <a   href="#"><img src="{{helper.cdnhost}}/assets/img/eire.png" alt="爱尔兰留学"><p>爱尔兰</p></a>
-      <a   href="#"><img src="{{helper.cdnhost}}/assets/img/Italy.png" alt="意大利留学"><p>意大利</p></a>
-      <a style="margin-right: 0" href="#"><img src="{{helper.cdnhost}}/assets/img/Spanish.png" alt="西班牙留学"><p>西班牙</p></a><br>
+      <a style="margin-right: 0"  href="#"><img src="{{helper.cdnhost}}/assets/img/Italy.png" alt="意大利留学"><p>意大利</p></a>
+      <a  href="#"><img src="{{helper.cdnhost}}/assets/img/Spanish.png" alt="西班牙留学"><p>西班牙</p></a>
       <a  href="#"><img src="{{helper.cdnhost}}/assets/img/blr.png" alt="白俄罗斯留学"><p>白俄罗斯</p></a>
       <a  href="#"><img src="{{helper.cdnhost}}/assets/img/Singapore.png" alt="新加披留学"><p>新加披</p></a>
       <a  href="#"><img src="{{helper.cdnhost}}/assets/img/malaysia.png" alt="马来西亚留学"><p>马来西亚</p></a>
-      <a  href="#"><img src="{{helper.cdnhost}}/assets/img/HongKong.png" alt="中国香港留学"><p>中国香港</p></a>
       <a  href="#"><img src="{{helper.cdnhost}}/assets/img/danmark.png" alt="丹麦留学"><p>丹麦</p></a>
       <a  href="#"><img src="{{helper.cdnhost}}/assets/img/germany.png" alt="德国留学"><p>德国</p></a>
       <a  href="#"><img src="{{helper.cdnhost}}/assets/img/France.png" alt="法国留学"><p>法国</p></a>
