--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -12,7 +12,7 @@
     </ul>
   </div>
   <div class="homepage-title">
-    <p>{{item.title}}" <div>{{item.from}}</div></p>
+    <p>{{item.title}}" <div>{{item.tag_list}}</div></p>
   </div>
   <div class="homepage-p">
     <p><a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}" class="dui-text-warning" rel="nofollow">
