--- a/views/widget2/bottom_comment/bottom_comment.html
+++ b/views/widget2/bottom_comment/bottom_comment.html
@@ -1,22 +1,19 @@
 <!--阅读/收藏/评论/点赞-->
-<div class="bot_comment clearfix">
-  <ul class="clearfix">
+
     <li onclick="showbottom(1, {{item.id}}, {{userinfo.usertype}}, {{item.category_id}})" id="yuedu_li_{{item.id}}" style="cursor: inherit;">
       <i class="iconfont " id="yuedu_{{item.id}}">&#xe9ca;</i>
-      <span id="yuedu_span_{{item.id}}">阅读（<em id="yuedu_em_{{item.id}}">{{item.views}}</em>）</span>
+      <span id="yuedu_span_{{item.id}}">阅读<em id="yuedu_em_{{item.id}}">{{item.views}}</em></span>
     </li>
     <li onclick="showbottom(2, {{item.id}}, {{userinfo.usertype}}, {{item.category_id}})" id="shoucang_li_{{item.id}}">
       <i class="iconfont " id="shoucang_{{item.id}}">&#xe7ed;</i>
-      <span id="shoucang_span_{{item.id}}">收藏（<em id="shoucang_em_{{item.id}}">{{item.favorites}}</em>）</span>
+      <span id="shoucang_span_{{item.id}}">收藏<em id="shoucang_em_{{item.id}}">{{item.favorites}}</em></span>
     </li>
 
     <li onclick="showbottom(3, {{item.uid}}, {{item.id}}, {{userinfo.usertype}}, {{item.category_id}})" id="pinglun_li_{{item.id}}">
       <i class="iconfont " id="pinglun_{{item.id}}">&#xe61f;</i>
-      <span id="pinglun_span_{{item.id}}">评论（<em id="pinglun_em_{{item.id}}">{{item.comments}}</em>）</span>
+      <span id="pinglun_span_{{item.id}}">评论<em id="pinglun_em_{{item.id}}">{{item.comments}}</em></span>
     </li>
     <li class="dian" onclick="showbottom(4, {{item.id}}, {{userinfo.usertype}}, {{item.category_id}})" id="dianzan_li_{{item.id}}">
       <i class="iconfont " id="dianzan_{{item.id}}">&#xe651;</i>
-      <span id="dianzan_span_{{item.id}}">点赞（<em id="dianzan_em_{{item.id}}">{{item.votes}}</em>）</span>
+      <span id="dianzan_span_{{item.id}}">点赞<em id="dianzan_em_{{item.id}}">{{item.votes}}</em></span>
     </li>
-  </ul>
-</div>
