--- a/views/login/login.html
+++ b/views/login/login.html
@@ -31,6 +31,15 @@
       margin-right: 10px;
       cursor:pointer;
     }
+    .wrap-con  {
+      -webkit-appearance: radio;  -moz-appearance: radio;  appearance: radio;  position: relative;  top:-3px;  left: 18px;  border: 0;  border:none;
+    }
+    .wrap-ing  {
+      -webkit-appearance: radio;   -moz-appearance: radio;  appearance: radio;  position: relative;  top:-3px;  left: 18px;  border:none;  outline:none;
+    }
+    input[type="radio"]:checked {color: red;}
+
+    input[type="radio"]:checked+label {color: red;}
   </style>
 
 <body>
@@ -45,11 +54,14 @@
     <img src="{{helper.cdnhost}}/assets/img/login_background.png" alt="" style="width: 100%;height: 550px;min-width: 1920px;"/>
     <div class="login_content">
       <div class="login_nei text-center loginscreen  animated fadeInDown" style="text-align: left">
-        <h3 class="login_nei_title">登录金吉列<a target="_blank"  href="{{helper.urlgen('register')}}">注册一个新账号</a></h3>
-
+        <!-- <h3 class="login_nei_title">登录金吉列<a target="_blank"  href="{{helper.urlgen('register')}}">注册一个新账号</a></h3> -->
+        <div class=" clearfix" id="guwen" style="margin-left: -15px;font-size: 18px;">
+            <input class="wrap-con" type="radio" name="payMethod" value="0" checked="checked" id="liu"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu">留学顾问</label> 
+            <!-- <input class="wrap-ing" type="radio" name="payMethod" value="1" id="yi"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="yi">移民顾问</label> -->
+        </div>
         <form class="m-t" role="form" style="margin-top: 20px">
           <div class="form-group inputtext_isr" style="position: relative;height: 28px">
-            <input type="text" class="form-control" placeholder="手机号" id="newEmail"/>
+            <input type="text" class="form-control" placeholder="请输入手机号/员工号" id="newEmail"/>
             <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 8px" class="iconfont">&#xe619;</i>
           </div>
           <div class="form-group inputtext_isr" style="position: relative;height: 28px;margin-top: 20px">
@@ -72,7 +84,7 @@
 
 
 
-        <div class="fen">
+        <!-- <div class="fen">
           <h4>第三方快速登录：</h4>
           <div class="bdsharebuttonbox" id="fx" style="float: left;margin-top: 7px">
             <img src="{{helper.cdnhost}}/assets/img/weibo_login.png" alt="" id="weibo"/>
@@ -82,7 +94,7 @@
             </a>
             <img src="{{helper.cdnhost}}/assets/img/QQ_login.png" alt="" id="qq"/>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="login_footer">
