--- a/views/widget/new_footer/new_footer.html
+++ b/views/widget/new_footer/new_footer.html
@@ -45,8 +45,30 @@
       </ol>
     </div>
     <p class="copyright">©2009金吉列出国留学咨询服务有限公司 &nbsp;版权所有&nbsp;京ICP备05010035号&nbsp;&nbsp;留学投诉电话：4006-213-315&nbsp;&nbsp;投诉邮箱：315@jjl.cn</p>
-    <div class="adviser-login">
+    <div class="adviser-login" onclick="adviserlogin()">
       咨询顾问登录
     </div>
   </div>
 </div>
+<script>
+  function adviserlogin () {
+    var h = window.location.href;
+    console.log('h', h);
+    var hh = h.split("/");
+    console.log('hh[1]', hh[3]);
+    var hhh = h.split("?");
+    console.log('hhh', hhh[1])
+    if (hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'login' && hh[3] != 'login?h=http:') {
+      console.log('11111')
+//      window.location.href = '/login?h=' + h
+      window.open('/login?h=' + h);
+    } else if (hhh[1] != undefined && hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'login') {
+      console.log('aaaa')
+      window.location.reload();
+    } else {
+      console.log('22222');
+//      window.location.href = '/login'
+      window.open('/login?h=');
+    }
+  }
+</script>
