--- a/views/widget2/side_menu/adviser_side_menu.html
+++ b/views/widget2/side_menu/adviser_side_menu.html
@@ -77,8 +77,8 @@ set side_ul = [
                         {% elif  mItem.li_name == '收到的评论' %}
                         &#xe61b;
                         {% elif  mItem.li_name == '发布我的文章' %}
-                        &#xe768;
-                        {% elif  mItem.li_name == '发布案例' %}
+                        &#xe62e;
+                        {% elif  mItem.li_name == '上传我的二维码' %}
                         &#xe631;
                         {% elif  mItem.li_name == '个人信息设置' %}
                         &#xe621;
