--- a/public/assets/css/release_article.css
+++ b/public/assets/css/release_article.css
@@ -40,7 +40,7 @@
   color: #333;
   padding-left: 10px;
   border: 1px solid #dcdcdc;
-  width: 580px;
+  width: 595px;
   line-height: 30px;
   box-sizing: border-box;
   margin-right: 10px;
@@ -48,8 +48,9 @@
 
 .rel-case-text1 .numTip{
 	font-size: 12px;
-	line-height: 30px;
+	/*line-height: 30px;*/
 	color:#999;
+  vertical-align: text-top;
 }
 
 .rel-case-text1 .active{
@@ -98,8 +99,7 @@
 }
 .editor-btn-box{
 	margin-top: 30px;
-	text-align: right;
-  padding-right: 147px;
+	text-align: center;
 }
 
 .editor-btn-box .dui-btn{
@@ -132,146 +132,61 @@
 #word-num{
   color:#c13232;
 }
-
-/*====图片库选择======*/
-.figure{
-  float:left;
-  width:150px;
-  height:150px;
-  display: none;
-  position: relative;
+.art-type-sel{
+  margin-right:60px;
+  vertical-align:middle;
+  cursor: pointer;"
 }
-.figure img{
-  width:100%;
-  height:150px;
-  display: block;
-}
-.figure_delete{
-  position: absolute;
-    font-size: 18px;
-    color: #c13232;
-    right: 5px;
-    bottom: 5px;
-    z-index: 1000;
-}
-.figure-label{
-  width:150px;
-  height:150px;
-  background:#f3f3f3;
-  margin-bottom: 0;
-  text-align: center;
-  line-height: 150px;
-  float:left;
-  margin-left: 4px;
-}
-
-.add-icon{
-  font-size: 78px;
-  color: #fff;
-}
-
-.pic-lib{
-  position: fixed;
-  left:50%;
-  top:50%;
-  width:737px;
-  height:515px;
-  margin-left:-367.5px;
-  margin-top: -258.5px;
-  display: none;
-  z-index: 100000;
-}
-
-.pic-lib-top{
-  height:40px;
-  background:#f3f3f3;
-  padding-left: 20px;
-  font-size: 16px;
-  line-height: 40px;
-  color:#333;
-}
-
-.pic-lib-con{
-  padding:0px 15px 20px 20px;
-  background:#fff;
-}
-
-.pic-con-top-left{
-  float:left;
-  width:76px;
-  height:24px;
-  background:#c13232;
-  text-align: center;
-  line-height: 24px;
-  color:#fff;
-  font-size: 12px;
-  border-top-left-radius:5px;
-  border-top-right-radius:5px;
-}
-
-.pic-con-top-right{
-  float:right;
-  line-height: 24px;
-  color:#666;
-}
-.pic-con-ul{
-  border:1px solid #dcdcdc;
-  padding:20px;
-}
-.pic-con-ul li{
-  float:left;
-  margin-right:20px;
-  width:150px;
-  height:150px;
-  position: relative;
-  margin-top: 20px;
-
-}
-.pic-con-ul li img{
-  display: block;
-  width:100%;
-  height:150px;
-}
-
-.check-box{
-  display: block;
-  width:14px;
-  height:14px;
-  border:2px solid #999;
-  box-sizing: border-box;
-  position: absolute;
-  top:4px;
-  right:4px;
-  text-align: center;
-  line-height: 9px;
-}
-
-.sel-active{
-  background:#999;
-}
-
-.check-mark-icon{
-  font-size: 12px;
-  color:#333;
-}
-
-.pic-lib-btn{
-  margin-top: 20px;
-  text-align: right;
-}
-
-.pic-srue-btn{
-  padding:3px 25px;
+.art-type-i{
+  display: inline-block;
+  width:12px;
+  height:12px;
+  border-radius: 50%;
+  border: 1px solid #333;
+  vertical-align: text-top;
   margin-right: 5px;
 }
-
-.pic-cancel-btn{
-  padding:3px 25px;
-
+.art-type-sel i{
+  font-size: 14px;
+  color:#333;
 }
 
-.pic-cancel-btn{
-  background:#dcdcdc;
-  color:#666;
-  padding:3 25px;
+.level-sel{
+  margin-right:60px;
+  vertical-align:middle;
+  cursor: pointer;
+}
+.level-sel-i{
+  display: inline-block;
+  width:12px;
+  height:12px;
+  border-radius: 2.5px;
+  border: 1px solid #333;
+  vertical-align: text-top;
+  margin-right: 5px;
+}
+.level-sel i{
+  font-size: 14px;
+  color:#333;
+}
+.recommend-sel{
+  vertical-align:middle;
+  cursor: pointer;
+  margin-right: 30px;
+}
+.recommend-sel-i{
+  display: inline-block;
+  width:12px;
+  height:12px;
+  border-radius: 2.5px;
+  border: 1px solid #333;
+  vertical-align: text-top;
+  margin-right: 5px;
+}
+.recommend-sel i{
+  font-size: 14px;
+  color:#333;
+}
+.newsletter-hide{
+  display: none;
 }
