--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -30,10 +30,10 @@
       {% else %}  
       {% endif %}
 	    <!-- ========引入顾问侧边栏按钮======== -->
-      {% if login_info.usertype ==2 %}
+      {% if userinfo.usertype ==2 %}
         {% import "widget2/side_menu/adviser_side_menu.html" as adviser_side_menu %}
-        {{ adviser_side_menu.adviser_side_menu('发布专栏','',helper) }} 
-      {% elif login_info.usertype == 3 %}
+        {{ adviser_side_menu.adviser_side_menu('发布我的文章','',helper) }} 
+      {% elif userinfo.usertype == 3 %}
         {% import "widget2/side_menu/canzan_side_menu.html" as canzan_side_menu %}
         {{ canzan_side_menu.canzan_side_menu('发布专栏','',helper) }} 
       {% endif %}
@@ -42,33 +42,9 @@
       <div class="dui-layout-con dui-box-shadow" >
         <div class="rel-case-con" >
 	        <div class="main-title gray-bg">
-		        <h3 style="font-size: 18px;">专栏发布</h3>
+		        <h3 style="font-size: 18px;">发布我的文章</h3>
 	        </div>
   	      <div class="rel-case-list" >
-            <div class="rel-case-text1" style="margin-top: 25px;">
-              <label class="title active" for="art_type"><span>*</span> 选择文章发布类型：</label>
-              {% set artType = [
-                {"id":"11","txt":"留学聚焦"},
-                {"id":"12","txt":"申请攻略"},
-                {"id":"13","txt":"签证指导"},
-                {"id":"14","txt":"申请条件"},
-                {"id":"15","txt":"留学费用"},
-                {"id":"16","txt":"专家解读"}
-              ] %}
-              <select id="art_type" >
-                {% for item in artType %}
-                  {% if item.id == article.article_info.category_id %}
-                    <option value="{{item.id}}">{{item.txt}}</option>
-                  {% endif %}
-                {% endfor %}
-                {% for item in artType %}
-                  {% if item.id != article.article_info.category_id %}
-                    <option value="{{item.id}}">{{item.txt}}</option>
-                  {% endif %}
-                {% endfor %}
-              </select>
-              <span class="numTip" ></span>
-            </div>  
             <div class="rel-case-text1" style="margin-top: 20px;">
               <label class="title active" for="apply-country">
                 <span>*</span> 选择文章对应国家：
@@ -113,49 +89,11 @@
               </select>
               <span class="numTip" ></span>
             </div>
-            <div class="rel-case-text1 clearfix" style="margin-top: 20px;height: auto;">
-              <label class="title active" style="float:left;" >
-                <span>*</span> 点击选择文章配图：
-              </label>
-              {% if article.article_info.thumb != undefined %}
-              <div class="figure">
-                <img src="{{helper.imageThumb(article.article_info.thumb,'150x150')}}" data-src="{{article.article_info.thumb}}" id ="figure-img" />
-                <a  href="javascript:" class="figure_delete iconfont" title="删除" >
-                  &#xe8c1;
-                </a>
-              </div>
-              <label class="figure-label" style="display: none;">
-                <i class="iconfont add-icon">&#xe616;</i>
-              </label>
-              {% endif %}
-              <span class="numTip" style="float:left;margin-left:10px;margin-top:120px;">
-                 注：选择图片库对应的文章配图
-              </span>
-            </div>
   	        <div class="rel-case-text1" style="margin-top: 20px;">
       			  <label class="title active" for="rel-case-title"><span>*</span> 文章标题：</label>
       			  <input  id="rel-case-title" type="text" maxlength="30" value="{{article.article_info.title}}">
       			  <span class="numTip" style="display: block;margin-left: 97px;">填写文章标题，字数限30个汉字</span>
       		  </div>
-            <div class="rel-case-text1" style="margin-top: 20px;">
-              <label class="title active" for="rel-keyword" style="letter-spacing: 4.8px;">
-                <span>*</span> 关键词：
-              </label>
-              <input  id="rel-keyword" type="text" value="{{article.article_info.keywords}}">
-              <span class="numTip" style="display: block;margin-left: 97px;">
-                多关键词之间用 "," 隔开
-              </span>
-            </div>
-            <div class="rel-case-text1" style="margin-top: 20px;">
-              <label class="title active" for="art_abs" >
-                <span>*</span> 文章摘要：
-              </label>
-              <textarea class="art_abs" id="art_abs" maxlength="200" >{{article.article_info.introduce}}</textarea>
-              <div class="word-num">还可以输入<span id="word-num">200</span>字</div>
-              <span class="numTip" style="display: block;margin-left: 97px;">
-                填写文章内容概要信息，此内容将会在网站与个人主页显示，请认真填写
-              </span>
-            </div>
     		    <div class="rel-case-text1 clearfix" style="margin-top: 20px;" >
     			    <label class="title active" style="float:left">
                 <span>*</span> 正文内容：
@@ -176,7 +114,7 @@
                     保存到草稿
               </a>
               <a  href="javascript:void(0);" class="dui-btn btn-xlarge btn-appointment" id="sureBtn">
-                   	确定发布
+                   	立即发布
               </a>
             </div>
           </div>  
@@ -184,27 +122,6 @@
         </div>
       </div>
 	</div>
-  <!-- ====弹窗图片库==== -->
-  <div class="pic-lib" >
-    <div class="pic-lib-top" >
-      文章配图上传
-    </div> 
-    <div class="pic-lib-con" >
-      <div class="pic-con-top clearfix" >
-        <span class="pic-con-top-left">图库</span>
-        <span class="pic-con-top-right" id= "paging">
-          <i class="iconfont">&#xe65f;</i>
-          换一批
-        </span>
-      </div>
-      <ul class="pic-con-ul clearfix">
-      </ul>
-      <div class="pic-lib-btn" >
-        <a  href="javascript:void(0);" class="dui-btn btn-xlarge btn-appointment pic-srue-btn">确定</a>
-        <a  href="javascript:void(0);" class="dui-btn btn-xlarge pic-cancel-btn">取消</a>
-      </div>
-    </div>
-  </div>
   {% include "widget/footer/footer.html" %}
   <script>
     var login_ss = null; //获取用户信息
@@ -228,104 +145,7 @@
         //参赞默认为1 北京分公司
         city_id =1;
       }
-      $("#art_abs").on("change",function(){
-        this.value = this.value.substring(0, 200);
-      }); 
-      $("#art_abs").on("keydown",function(){
-        this.value  = this.value.substring(0, 200);
-      }); 
-      $("#art_abs").on("keyup",function(){
-        var strLength = $.trim($(this).val()).length; 
-        $("#word-num").html(200-strLength);
-        if(strLength > 200){
-          $("#word-num").html(0);
-          this.value  = this.value.substring(0, 200);
-        }
-      }); 
-      var picFlag = false;
-      var picSrc = null;
-      var picDataSrc =null;
-      var page = 0;
-      //点击弹出图片选择框
-      $(".figure-label").on("click",getPicData);
-      function getPicData(){
-        if($("#art_type").val()==''){
-          // 判断文章发布类型
-          layer.msg('请选择文章发布类型');
-          return false;
-        }else{
-          page++;
-          // console.log(page)
-          $.ajax({
-            url:'/soapi/attachment',
-            type:"GET",
-            dataType:"json",
-            data:{
-              catid:$("#art_type").val(),
-              page:page
-            },
-            success:function(result){
-              console.log(result)
-              if(result.code == 0){
-                $('.pic-con-ul').html(null);//清空一次
-                var html = '';
-                for(var i =0;i<result.data.list.length;i++){
-                  html += '<li>'+
-                            '<img src="'+fn.imageThumb(result.data.list[i].thumb,'150x150')+'" data-src="'+result.data.list[i].thumb+'">'+
-                            '<span class="check-box iconfont" ></span>'+
-                         '</li>';
-                }
-                $('.pic-con-ul').append(html);
-                $(".pic-con-ul li").eq(3).css({marginRight:0});
-                $(".pic-con-ul li").eq(7).css({marginRight:0});
-                $(".pic-lib").show();
-                $(".pic-con-ul li").on("click",function(){
-                  //图片选择点击
-                  $(".pic-con-ul li").find("span").removeClass('sel-active');
-                  $(".pic-con-ul li").find("span").html('');
-                  $(".pic-con-ul li").removeAttr('data-checked');
-                  $(this).find("span").addClass('sel-active');
-                  $(this).find("span").html('<i class="iconfont check-mark-icon" >&#xe652;</i>');
-                  picFlag = true;
-                  picSrc = $(this).find('img').attr("src");
-                  picDataSrc = $(this).find('img').attr("data-src");
-                });
-              }else{
-              }
-            },
-            error:function(XMLHttpRequest, textStatus, errorThrown){
-              console.log(errorThrown)
-            }  
-          })
-        }  
-      }
-      $(".pic-srue-btn").on("click",function(){
-        //点击确定
-        if(picFlag){
-          $(".pic-lib").hide();
-          $(".figure-label").hide();
-          $('.figure').show();
-          $('.figure').find("img").attr("src",picSrc);
-          $('.figure').find("img").attr("data-src",picDataSrc);
-        }else{
-          layer.msg("请选择一张图片");
-        }
-      });
-      $(".pic-cancel-btn").on("click",function(){
-        //点击取消
-        $(".pic-lib").hide();
-      });
-      $('.figure_delete').on("click",function(){
-        // 删除
-        $(this).prev().attr("src",'');
-        $(this).parent().hide();
-        $(".figure-label").show();
-        $(".pic-con-ul li").removeAttr('data-checked');
-        $(".pic-con-ul li span").removeClass('sel-active');
-        $(".pic-con-ul li span").html('');
-        picFlag = false;
-      });
-      $("#paging").on("click",getPicData); //点击换一批 
+  
       //编辑器
       var E = window.wangEditor;
       var editor = new E('#editor','#editor1');
@@ -382,34 +202,10 @@
       $('#sureBtn').on('click', function () {
         // 读取 html
         var data = editor.txt.html();
-        if($("#figure-img").attr('data-src')==''|| $("#figure-img").attr('data-src')==undefined){
-          // 判断文章配图
-          layer.msg('请选择文章配图');
-          return false;
-        }
         if($("#rel-case-title").val()==''){
           // 判断title
           $("#rel-case-title").focus();
-          $("#rel-case-title").next().html("填写文章标题，字数限30个汉字");
           return false;
-        }else{
-          $("#rel-case-title").next().html('填写文章标题，字数限30个汉字');
-        }
-        if($("#rel-keyword").val()==''){
-          //判断关键词
-          $("#rel-keyword").focus();
-          $("#rel-keyword").next().html("请填写关键词");
-          return false;
-        }else{
-          $("#rel-keyword").next().html('多关键词之间用空格或者 "," 隔开');
-        }
-        if($("#art_abs").val()==''){
-          // 判断文章摘要
-          $("#art_abs").focus();
-          $("#art_abs").next().next().html("请填写文章摘要");
-          return false;
-        }else{
-          $("#art_abs").next().next().html('填写文章内容概要信息，此内容将会在网站与个人主页显示，请认真填写');
         }
         if($("#editor1").find("p").html() == '<br>'){
           //判断正文
@@ -428,10 +224,7 @@
           data:{
             city_id:city_id,
             u_id:login_ss.uid,
-            category_id:$("#art_type").val(),
-            thumb:$("#figure-img").attr('data-src'), 	
             title:$.trim($("#rel-case-title").val()),
-            keywords:$.trim($("#rel-keyword").val()),
             country_id:$("#apply-country").val(),
             type:2,
             is_draft:1,
