--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -4,11 +4,11 @@
     <div class="homepageing" style="background:url({{helper.avaterimg(item.uid, 'small',item.user_info.status,item.user_info.version)}}) no-repeat 0 0;background-size: 50px 50px;"></div>
     <h3>{{item.user_info.realname}}<img src="../assets/img/1v.png" alt=""></h3>
     <ul>
-      <li><img src="../assets/img/wx.png" alt=""></li>
-      <li><img src="../assets/img/pyq.png" alt=""></li>
-      <li><img src="../assets/img/xl.png" alt=""></li>
-      <li><img src="../assets/img/qq.png" alt=""></li>
-      <li style="color: #666;font-size: 12px">举报</li>
+      <li class="share-btn"><img src="../assets/img/wx.png" alt=""></li>
+      <li class="share-btn"><img src="../assets/img/pyq.png" alt=""></li>
+      <li class="share-btn"><img src="../assets/img/xl.png" alt=""></li>
+      <li class="share-btn"><img src="../assets/img/qq.png" alt=""></li>
+      <li class="report-btn" style="color: #666;font-size: 12px">举报</li>
     </ul>
   </div>
   <div class="homepage-title">
