--- a/views/center_main.html
+++ b/views/center_main.html
@@ -24,8 +24,8 @@
 </style>
 <body style="background: #f5f5f5">
 {% include "widget/top/top.html" %}
-{% import "widget/nav_seventh/nav_seventh.html" as nav_seventh %}
-{{ nav_seventh.nav_seventh(route,tdk.cityid,helper) }}
+{% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
+{{ new_nav_first.new_nav_first(helper) }}
 {% if userinfo.usertype == 2 %} {#顾问#}
 <div class="dui-layout-lg clearfix list-h" style="margin-top: 20px;" id="AD_ADVISOR_CENTER_SEAT1"></div>
 {% elif userinfo.usertype == 3 %} {#参赞#}
@@ -150,7 +150,7 @@
         </div>
     </div>
 </div>
-{% include "widget/footer/footer.html" %}
+{% include "widget/new_footer/new_footer.html" %}
 <div id="photoDialog" style="display: none;"><!---->
     <!--上传pop-->
     <div class="upload-photo-container" id="upload-photo-container" style="display: none">
