--- a/views/index.html
+++ b/views/index.html
@@ -118,14 +118,6 @@
     left: 50%;
     margin-left: -77px;
   }
-  .swiper-slide{
-    height: 135px;
-    width: 400px;
-  }
-  .swiper-slide img{
-    height: 100%;
-    width: 100%;
-  }
   .slider .slider-dot ul li{
     border-radius: 50%;
   }
@@ -437,8 +429,8 @@
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script>
   $(function () {
-    //
-      $(window).on('scroll',function() {
+      //
+      $(window).on('scroll', function () {
           var $scroll = $(this).scrollTop();
           if ($scroll >= 200) {
               $('.nationality_guoqi_warp').show();
@@ -446,55 +438,30 @@
               $('.nationality_guoqi_warp').hide();
           }
       });
-     
+
       $('.lunbo_lift .slider').xSlider({
           //轮播图配置
-          autoplay : 500,
+          autoplay: 500,
           current: 0,
           speed: 500,
           intervalTime: 5000,
           pagination: true
       });
-      var timer=null;
-      var num=0;
-      function lonbo() {
-          if(num>1){
-              num=0;
+      var lunbotimer = null;
+      var num = 0;
+      lunbotimer = setInterval(function () {
+          num++;
+          if (num == 3) {
 //              $("#lunbo1").css({top:-270*num+(-270)+'px'})
-             $("#lunbo1").css({top:(-270)+'px'})
+              $("#lunbo1").css({top: (-270) + 'px'})
+              num = 0;
+          } else {
 
-          }else {
-              num++;
-              $("#lunbo1").animate({top:-270*num+(-270)+'px'})
-              console.log(-270*num+'px')
+              $("#lunbo1").animate({top: -270 * num + (-270) + 'px'})
+//                  console.log(-270*num+'px')
           }
-      }
-      setInterval(lonbo,1000)
-//      $('.lunbo_right .slider').xSlider({
-//          //轮播图配置
-////          autoplay : 500,
-//          mode:'vertical',
-////          current: 0,
-//          speed: 1000,
-//          intervalTime: 5000,
-//          slidesPerView : 2,
-//          slidesPerGroup : 2,
-////          pagination: true
-//      });
-
+      }, 2000)
   })
-//  $(function () {
-//      var mySwiper = new Swiper('.swiper-container',{
-//          autoplay : 500,
-//          loop: true,
-//          mode:'vertical',
-//          speed: 1000,
-//          slidesPerView : 2,
-//          slidesPerGroup : 2,
-//          pagination: true
-//          //其他设置
-//      });
-//  })
 </script>
 </body>
 <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
