首页城市的添加

--- a/views/index.html
+++ b/views/index.html
@@ -267,10 +267,12 @@
         {
         "companyName": "大连",
         "companyId": "13"
-        },
-        {
-        "companyName": "武汉",
-        "companyId": "14"
+        },  {
+        "companyName": "武昌",
+        "companyId": "50"
+        },  {
+        "companyName": "汉口",
+        "companyId": "51"
         },
         {
         "companyName": "西安",
